# meulex

./: .env.example  .gitignore  Dockerfile  README.md  configure.sh  deploy.sh  docker-compose.infrastructure.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: prometheus.yml
docs/: SETUP_SLACK.md  TROUBLESHOOTING.md
meulex/: __init__.py
meulex/api/: __init__.py  app.py
meulex/api/routes/: __init__.py  chat.py  embed.py  slack.py
meulex/cli/: __init__.py  main.py
meulex/config/: feature_flags.yaml  settings.py
meulex/core/: __init__.py
meulex/core/caching/: __init__.py  cache_manager.py
meulex/core/chunking/: text_splitter.py
meulex/core/embeddings/: __init__.py  base.py  factory.py
meulex/core/embeddings/providers/: __init__.py  jina.py
meulex/core/ingestion/: ingestor.py
meulex/core/reranking/: __init__.py  base.py  factory.py  simple.py
meulex/core/retrieval/: dense.py  hybrid.py  sparse.py
meulex/core/vector/: __init__.py  base.py  qdrant_store.py
meulex/eval/: __init__.py  simple_eval.py
meulex/integrations/: __init__.py
meulex/integrations/slack/: auth.py  models.py  processor.py
meulex/llm/: __init__.py  base.py  cascade.py  factory.py  prompt_builder.py
meulex/llm/providers/: openai.py
meulex/observability/: __init__.py  otel.py
meulex/security/: __init__.py  middleware.py
meulex/tests/: __init__.py
meulex/tests/integration/: __init__.py  test_api.py
meulex/tests/unit/: __init__.py  test_hybrid_retrieval.py  test_llm_cascade.py
meulex/utils/: __init__.py  exceptions.py  security.py
monitoring/: prometheus.yml
test_data/: api_reference.txt  doc1.md  faq.md
